fix bloom on mobile

--- a/styles/global.css
+++ b/styles/global.css
@@ -195,7 +195,7 @@
 }
 
 .bloom {
-	@apply absolute w-60 h-60;
+	@apply absolute md:w-60 md:h-60 sm:w-48 sm:h-48 h-32 w-32;
 	will-change: opacity;
 	opacity: 0;
 	filter: blur(80px);
